objects/kugo2p__SalesQuoteProductLine__c.object
<CustomObject>
    <description>Kugamon - Related object to Quote for Quote Product Lines. A Product is configured when the related Additional Product Info key field Service equals False.</description>
    <fields>
        <fullName>kuga_sub__Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Quote Product Line is renewable or not. The underlying Product is setup on the Product object where the Renewable checkbox field can be set. Field value is initially set and can be changed. Requires a Renewable Service Line be present.</description>
        <label>Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__AccountPricing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Account Pricing. 

Used as basis for Sales Price. Disables Tiered Pricing.</description>
        <inlineHelpText>Lookup to the Account Pricing. 

Used as basis for Sales Price. Disables Tiered Pricing.</inlineHelpText>
        <label>Account Pricing</label>
        <referenceTo>kugo2p__AccountPricing__c</referenceTo>
        <relationshipLabel>Quote Product Lines</relationshipLabel>
        <relationshipName>Quote_Product_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__AllowQuantityChange__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Kit/Bundle Member Lines only. Allows Quantity to be editable in Quote and Order configurator page. Does not lock the Quantity at the record level</description>
        <inlineHelpText>For Kit/Bundle Member Lines only. Allows Quantity to be editable in Quote and Order configurator page. Does not lock the Quantity at the record level</inlineHelpText>
        <label>Edit Quantity (Kit/Bundle Member)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>kugo2p__Carrier__c</referenceTo>
        <relationshipName>Sales_Quote_Product_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__ConfigurationOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the Configuration Option record referenced in this Quote Product Line.</description>
        <label>Configuration Option</label>
        <referenceTo>kugo2p__ConfigurationOption__c</referenceTo>
        <relationshipLabel>Quote Product Lines</relationshipLabel>
        <relationshipName>Quote_Product_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__CostMarkupAmount__c</fullName>
        <label>Cost Markup Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__CustomerPODate__c</fullName>
        <formula>kugo2p__SalesQuote__r.kugo2p__CustomerPODate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__CustomerPOLine__c</fullName>
        <label>Customer PO Line</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__CustomerPONumber__c</fullName>
        <formula>kugo2p__SalesQuote__r.kugo2p__CustomerPONumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateAvailableToPromise__c</fullName>
        <inlineHelpText>Date is based on either Date Required or Today&apos;s Date plus the Product Available to Promise Lead Time</inlineHelpText>
        <label>Date Available To Promise</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__DateRequired__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Required</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__DiscountAmount__c</fullName>
        <formula>round((kugo2p__ProductAmount__c * kugo2p__LineDiscountPercent__c) + (kugo2p__ProductAmount__c * kugo2p__QuoteDiscountPercent__c),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__DiscountSalesPrice__c</fullName>
        <description>Effective Price is the Sales Price with Discounts Applied.</description>
        <formula>If(
  kugo2p__Quantity__c = 0,
  round(kugo2p__SalesPrice__c * (1 - (kugo2p__QuoteDiscountPercent__c + kugo2p__LineDiscountPercent__c)), 2),
  round(kugo2p__TotalAmount__c / kugo2p__Quantity__c, 2)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Effective Price is the Sales Price with Discounts Applied</inlineHelpText>
        <label>Effective Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__EffectiveDiscount__c</fullName>
        <description>Effective Discount is based on Total Amount from List Amount.</description>
        <formula>IF(
  kugo2p__ListAmount__c = 0,
  NULL,
  IF(
    kugo2p__ListPrice__c == kugo2p__SalesPrice__c,
    (kugo2p__QuoteDiscountPercent__c + kugo2p__LineDiscountPercent__c),
    (kugo2p__ListAmount__c - kugo2p__TotalAmount__c) / kugo2p__ListAmount__c
  )
)</formula>
        <inlineHelpText>Effective Discount is based on Total Amount from List Amount</inlineHelpText>
        <label>Effective Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__KitBundleLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kit/Bundle Line</label>
        <referenceTo>kugo2p__SalesQuoteProductLine__c</referenceTo>
        <relationshipName>Sales_Quote_Product_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__KitBundleMemberRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kit/Bundle Member Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__KitBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kit/Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__LineDescription__c</fullName>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__LineDiscountAmount__c</fullName>
        <formula>round(kugo2p__ProductAmount__c * kugo2p__LineDiscountPercent__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__LineDiscountPercent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Line Discount Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__LineGroupSortOrder__c</fullName>
        <label>Line Group Sort Order</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__LineGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Group</label>
        <referenceTo>kugo2p__QuoteLineGroup__c</referenceTo>
        <relationshipLabel>Quote Product Lines</relationshipLabel>
        <relationshipName>Quote_Product_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__LineUnitCost__c</fullName>
        <description>Unit Cost Override, if Blank, &apos;Product Unit Cost&apos; is used. User configuration controlled by Additional Product Info configuration settings and if &apos;Edit Unit Cost&apos; is checked.</description>
        <inlineHelpText>Unit Cost Override, if Blank, &apos;Product Unit Cost&apos; is used. User configuration controlled by Additional Product Info configuration settings and if &apos;Edit Unit Cost&apos; is checked</inlineHelpText>
        <label>Line Unit Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__Line__c</fullName>
        <formula>Right(&apos;00&apos; + TEXT(kugo2p__SortOrder__c), 3)&amp;&quot; &quot;&amp;HYPERLINK(&quot;/&quot; + Id,  &quot;Detail&quot;, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ListAmount__c</fullName>
        <description>Quantity multiplied by List Price.</description>
        <formula>round(kugo2p__Quantity__c * kugo2p__ListPrice__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quantity multiplied by List Price</inlineHelpText>
        <label>List Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ListPrice__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__NetAmount__c</fullName>
        <formula>round(kugo2p__TotalAmount__c +  kugo2p__VATAmount__c + kugo2p__TaxAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__NonStock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__OpportunityLineItemId__c</fullName>
        <description>References the Opportunity Product Line of the related Opportunity associated with the Quote for the particular Quote Product Line.</description>
        <inlineHelpText>References the Opportunity Product Line of the related Opportunity associated with the Quote for the particular Quote Product Line</inlineHelpText>
        <label>Opportunity Line Item Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ParentLine__c</fullName>
        <formula>IF( 
NOT(ISBLANK(kugo2p__ParentProductLine__c)), 
HYPERLINK(&quot;/&quot; &amp; kugo2p__ParentProductLine__c, kugo2p__ParentProductLine__r.kugo2p__Product__r.kugo2p__ReferenceProduct__r.Name, &quot;_self&quot;), 
HYPERLINK(&quot;/&quot; &amp; kugo2p__ParentServiceLine__c, kugo2p__ParentServiceLine__r.kugo2p__Service__r.kugo2p__ReferenceProduct__r.Name, &quot;_self&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ParentProductLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product Line</label>
        <referenceTo>kugo2p__SalesQuoteProductLine__c</referenceTo>
        <relationshipLabel>Quote Product Lines (Parent Product Line)</relationshipLabel>
        <relationshipName>Quote_Product_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__ParentServiceLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Service Line</label>
        <referenceTo>kugo2p__SalesQuoteServiceLine__c</referenceTo>
        <relationshipLabel>Quote Product Lines</relationshipLabel>
        <relationshipName>Quote_Product_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__PricingMethod__c</fullName>
        <label>Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>kugo2p__PricingMethod</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__ProductAmount__c</fullName>
        <description>Quantity multiplied by Sales Price.</description>
        <formula>round(kugo2p__Quantity__c * kugo2p__SalesPrice__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quantity multiplied by Sales Price</inlineHelpText>
        <label>Product Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductCost__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Cost Number</label>
        <referenceTo>kugo2p__ProductCost__c</referenceTo>
        <relationshipLabel>Quote Product Lines</relationshipLabel>
        <relationshipName>Quote_Product_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductFamily__c</fullName>
        <formula>kugo2p__Product__r.kugo2p__ProductFamily__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductName__c</fullName>
        <description>Product Name Override, if Blank, Name from Product record is used. User configuration controlled by Additional Product Info configuration settings and if &apos;Edit Product Name&apos; is checked.</description>
        <inlineHelpText>Product Name Override, if Blank, Name from Product record is used. User configuration controlled by Additional Product Info configuration settings and if &apos;Edit Product Name&apos; is checked</inlineHelpText>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or is not a product.</errorMessage>
            <filterItems>
                <field>kugo2p__AdditionalProductDetail__c.kugo2p__Service__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>kugo2p__AdditionalProductDetail__c</referenceTo>
        <relationshipLabel>Quote Product Lines</relationshipLabel>
        <relationshipName>Sales_Quote_Product_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__QuoteDiscountAmount__c</fullName>
        <formula>round(kugo2p__ProductAmount__c * kugo2p__QuoteDiscountPercent__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__QuoteDiscountPercent__c</fullName>
        <formula>kugo2p__SalesQuote__r.kugo2p__DiscountPercent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Discount Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesPrice__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesQuote__c</fullName>
        <label>Quote Number</label>
        <referenceTo>kugo2p__SalesQuote__c</referenceTo>
        <relationshipLabel>Quote Product Lines</relationshipLabel>
        <relationshipName>Sales_Quote_Product_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kugo2p__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxAmount__c</fullName>
        <formula>round(( kugo2p__TotalAmount__c *  kugo2p__TaxSalesRate__c ) +
( kugo2p__TotalAmount__c *  kugo2p__TaxExciseRate__c ) +
( kugo2p__TotalAmount__c *  kugo2p__TaxUsageRate__c ),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxExciseRate__c</fullName>
        <label>Tax Excise Rate</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxLocation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Tax Location</label>
        <referenceTo>kugo2p__TaxLocation__c</referenceTo>
        <relationshipName>Sales_Quote_Product_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxSalesRate__c</fullName>
        <label>Tax Sales Rate</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxUsageRate__c</fullName>
        <label>Tax Usage Rate</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxVAT__c</fullName>
        <formula>IF(
  OR(
    kugo2p__TaxAmount__c &gt; 0,
    kugo2p__VATAmount__c &gt; 0
  ),
  &apos;Yes&apos;,
  &apos;No&apos;
)</formula>
        <label>Tax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableExcise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Excise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableSales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableUsage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableVAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable VAT/GST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TotalAmount__c</fullName>
        <formula>round(kugo2p__ProductAmount__c - kugo2p__DiscountAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__UnitCost__c</fullName>
        <formula>If( ISBLANK(kugo2p__ProductCost__c), kugo2p__Product__r.kugo2p__UnitCost__c, kugo2p__ProductCost__r.kugo2p__UnitCost__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__UnitofMeasure__c</fullName>
        <formula>text( kugo2p__Product__r.kugo2p__UnitofMeasure__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit of Measure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__VATAmount__c</fullName>
        <formula>round(kugo2p__TotalAmount__c *  kugo2p__VATRate__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT/GST Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__VATRate__c</fullName>
        <label>VAT/GST Rate</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__VATRegistration__c</fullName>
        <label>VAT Registration</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__VAT__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>VAT/GST</label>
        <referenceTo>kugo2p__VAT__c</referenceTo>
        <relationshipLabel>Quote Product Lines</relationshipLabel>
        <relationshipName>Sales_Quote_Product_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>kugo2p__Warehouse__c</referenceTo>
        <relationshipName>Sales_Quote_Product_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__X0ChargeReason__c</fullName>
        <label>$0 Charge Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kit/Bundle</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Loaner</fullName>
                </value>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quote Product Line</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Quote Product Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Product Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>kugo2p__ActiveProductCheck</fullName>
        <active>true</active>
        <description>Ensure the selected product is active</description>
        <errorConditionFormula>AND(kugo2p__Product__r.kugo2p__Active__c = false, ISNEW())</errorConditionFormula>
        <errorDisplayField>kugo2p__Product__c</errorDisplayField>
        <errorMessage>The selected Product is not active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>kugo2p__Cant_Change_Product_Fields</fullName>
        <active>true</active>
        <description>Don&apos;t allow changes to the Product fields once saved.</description>
        <errorConditionFormula>ISCHANGED( kugo2p__Product__c )</errorConditionFormula>
        <errorDisplayField>kugo2p__Product__c</errorDisplayField>
        <errorMessage>Once a product line is saved, the Product reference cannot be changed. Please create a new line and delete this one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>kugo2p__ServiceCheck</fullName>
        <active>true</active>
        <errorConditionFormula>AND(kugo2p__Product__r.kugo2p__Service__c = true, CreatedDate = LastModifiedDate )</errorConditionFormula>
        <errorDisplayField>kugo2p__Product__c</errorDisplayField>
        <errorMessage>Product Must Not Be A Service</errorMessage>
    </validationRules>
</CustomObject>